--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.562.0",
-    "next": "^14.2.35",
+    "next": "14.2.35",
     "next-contentlayer": "^0.3.4",
-    "next-intl": "^4.7.0",
-    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,8 +31,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "tailwindcss": "^4",
